force-app/main/default/objects/Rollup__mdt/Rollup__mdt.object-meta.xml
<CustomObject>
    <description>NPSP Customizable Rollup definitions</description>
    <label>Rollup</label>
    <pluralLabel>Rollups</pluralLabel>
</CustomObject>