force-app/main/default/objects/Rollup__mdt/fields/Amount_Field__c.field-meta.xml
<CustomField>
    <fullName>Amount_Field__c</fullName>
    <label>Amount Field</label>
    <metadataRelationshipControllingField>Rollup__mdt.Amount_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>RollupsAmount</relationshipLabel>
    <relationshipName>RollupsAmount</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>