force-app/main/default/objects/Rollup__mdt/fields/Amount_Object__c.field-meta.xml
<CustomField>
    <fullName>Amount_Object__c</fullName>
    <label>Amount Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>RollupAmount</relationshipLabel>
    <relationshipName>RollupAmount</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>