force-app/main/default/objects/Rollup__mdt/fields/Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Field__c</fullName>
    <label>Date Field</label>
    <metadataRelationshipControllingField>Rollup__mdt.Date_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>RollupsDate</relationshipLabel>
    <relationshipName>RollupsDate</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>