force-app/main/default/objects/Rollup__mdt/fields/Date_Object__c.field-meta.xml
<CustomField>
    <fullName>Date_Object__c</fullName>
    <label>Date Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>RollupsDate</relationshipLabel>
    <relationshipName>RollupsDate</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>