force-app/main/default/objects/Rollup__mdt/fields/Detail_Field__c.field-meta.xml
<CustomField>
    <fullName>Detail_Field__c</fullName>
    <label>Field to Roll Up</label>
    <metadataRelationshipControllingField>Rollup__mdt.Detail_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>RollupsDetail</relationshipLabel>
    <relationshipName>RollupsDetail</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>