force-app/main/default/objects/Rollup__mdt/fields/Detail_Object__c.field-meta.xml
<CustomField>
    <fullName>Detail_Object__c</fullName>
    <label>Detail Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>RollupsDetail</relationshipLabel>
    <relationshipName>RollupsDetail</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>