force-app/main/default/objects/Rollup__mdt/fields/Filter_Group__c.field-meta.xml
<CustomField>
    <fullName>Filter_Group__c</fullName>
    <label>Filter Group</label>
    <referenceTo>Filter_Group__mdt</referenceTo>
    <relationshipLabel>Rollups</relationshipLabel>
    <relationshipName>Rollups</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>