force-app/main/default/objects/Rollup__mdt/fields/Integer__c.field-meta.xml
<CustomField>
    <fullName>Integer__c</fullName>
    <description>Integer value to indicate how many years ago or days back to roll-up for</description>
    <label>Integer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>