force-app/main/default/objects/Rollup__mdt/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Count</fullName>
                <default>true</default>
                <label>Count</label>
            </value>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Largest</fullName>
            </value>
            <value>
                <fullName>Smallest</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Last</fullName>
            </value>
            <value>
                <fullName>Years_Donated</fullName>
                <label>Years Donated</label>
            </value>
            <value>
                <fullName>Donor_Streak</fullName>
                <label>Donor Streak</label>
            </value>
            <value>
                <fullName>Best_Year</fullName>
                <label>Best Year</label>
            </value>
            <value>
                <fullName>Best_Year_Total</fullName>
                <label>Best Year Total</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>