force-app/main/default/objects/Rollup__mdt/fields/Summary_Field__c.field-meta.xml
<CustomField>
    <fullName>Summary_Field__c</fullName>
    <label>Target Field</label>
    <metadataRelationshipControllingField>Rollup__mdt.Summary_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>RollupsSummary</relationshipLabel>
    <relationshipName>RollupsSummary</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>