force-app/main/default/objects/Rollup__mdt/fields/Summary_Object__c.field-meta.xml
<CustomField>
    <fullName>Summary_Object__c</fullName>
    <label>Target Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>RollupsSummary</relationshipLabel>
    <relationshipName>RollupsSummary</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>