force-app/main/default/objects/Rollup__mdt/fields/Time_Bound_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Bound_Operation_Type__c</fullName>
    <description>Related to the Integer__c field. The value in that field represents the number of Years to sum or the number of days back to sum amounts for.</description>
    <label>Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All_Time</fullName>
                <default>true</default>
                <label>All Time</label>
            </value>
            <value>
                <fullName>Years_Ago</fullName>
                <label>Years Ago</label>
            </value>
            <value>
                <fullName>Days_Back</fullName>
                <label>Days Back</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>